compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__inlay_hints__hints_in_use.snap
---
source: compiler-core/src/language_server/tests/inlay_hints.rs
expression: hints
---
[
  {
    "position": {
      "line": 9,
      "character": 19
    },
    "label": "Int",
    "kind": 1,
    "paddingLeft": true
  },
  {
    "position": {
      "line": 10,
      "character": 25
    },
    "label": "Int",
    "kind": 1,
    "paddingLeft": true
  }
]
