compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__inlay_hints__hints_nested_for_apply_fn_let.snap
---
source: compiler-core/src/language_server/tests/inlay_hints.rs
expression: hints
---
[
  {
    "position": {
      "line": 9,
      "character": 21
    },
    "label": "Int",
    "kind": 1,
    "paddingLeft": true
  },
  {
    "position": {
      "line": 10,
      "character": 27
    },
    "label": "Int",
    "kind": 1,
    "paddingLeft": true
  }
]
